fix(modules/avaliacao-headless-impl) adjustment in yaml
